<resources>
    <string name="app_name">Jahit</string>
    <string name="project_choice_greeting">Welcome to Jahit.co.id</string>
    <string name="project_choice_title">What do you want to be in Jahit.co.id?</string>
    <string name="project_choice_customer_description">Customer who wants assign a sewing project</string>
    <string name="project_choice_partner_description">Vendor who wants to be Jahit.co.id partner</string>
    <string name="next_button_text">Next</string>
    <string name="movie_list_title">Movie</string>
    <string name="project_list_no_item_text">There is no available movie at the moment.</string>
    <string name="project_add_greeting">Hi, Jahit.co.id Customer!</string>
    <string name="project_add_description">Please fill these fields below to be sent to our 2000 vendor and find your best vendor!</string>
    <string name="project_add_name_field">Project Name</string>
    <string name="project_add_category_field">Category</string>
    <string name="project_add_amount_field">Order</string>
    <string name="project_add_address_field">Address</string>
    <string name="project_add_note_field">Note</string>
    <string name="project_add_preview_field">Upload Preview</string>
    <string name="project_add_empty_field_message">Please fill out this form!</string>
    <string name="project_add_submit_text">Add Project</string>
    <string name="project_detail_title_information">Product Information</string>
    <string name="project_detail_title_category">Category</string>
    <string name="project_detail_title_amount">Quotation</string>
    <string name="project_detail_title_vendor">Vendor</string>
    <string name="project_detail_title_start_date">Start Date</string>
    <string name="project_detail_title_end_date">End Date</string>
    <string name="project_detail_title_address">Address</string>
    <string name="project_detail_title_note">Note</string>
    <string name="title_project">Project</string>
    <string name="title_transaction">Transaction</string>
    <string name="title_chat">Chat</string>
    <string name="double_back_pressed_warning">Press back again to exit</string>
    <string name="project_add_notification_title">Customer has just added new project</string>
    <string name="project_add_notification_content">Let\'s see and make a quotation!</string>
    <string name="yes">Yes</string>
    <string name="external_storage_text">External Storage</string>
    <string name="permission_denied">Permission denied. Please grant permission to use storage!</string>
    <string name="permission_ask_title">Permission necessary!</string>
    <string name="permission_ask_content">Permission is necessary!</string>
    <string name="internet_connected">Internet Connected !</string>
    <string name="internet_disconnected">Internet Disconnected !</string>
    <string name="search_hint">Search your movie here !</string>
</resources>