<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.AddProjectFragment">

    <ImageView
        android:id="@+id/back_button"
        android:layout_height="32dp"
        android:layout_width="32dp"
        android:layout_marginVertical="16dp"
        android:src="@drawable/ic_back"
        android:layout_marginLeft="32dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="32dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/project_add_greeting"
        android:fontFamily="@font/raleway"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:textSize="24dp"/>

    <TextView
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/project_add_description"
        android:fontFamily="@font/raleway"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginHorizontal="32dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/project_add_name_field"
        android:textColorHint="@color/grey"
        app:boxStrokeColor="@color/black"
        app:boxStrokeErrorColor="@color/red">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_project_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:textColor="@color/black"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginHorizontal="32dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/project_add_category_field"
        android:textColorHint="@color/grey"
        app:boxStrokeColor="@color/black"
        app:boxStrokeErrorColor="@color/red">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_project_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:textColor="@color/black"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginHorizontal="32dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/project_add_amount_field"
        android:textColorHint="@color/grey"
        app:boxStrokeColor="@color/black"
        app:boxStrokeErrorColor="@color/red">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_project_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:textColor="@color/black"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginHorizontal="32dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/project_add_address_field"
        android:textColorHint="@color/grey"
        app:boxStrokeColor="@color/black"
        app:boxStrokeErrorColor="@color/red">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_project_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:textColor="@color/black"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginHorizontal="32dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/project_add_note_field"
        android:textColorHint="@color/grey"
        app:boxStrokeColor="@color/black"
        app:boxStrokeErrorColor="@color/red">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_project_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:textColor="@color/black"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginHorizontal="32dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/project_add_preview_field"
        android:textColorHint="@color/grey"
        app:boxStrokeColor="@color/black"
        app:boxStrokeErrorColor="@color/red">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_project_preview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:textColor="@color/black"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_project_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project_add_submit_text"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp" />

    </LinearLayout>

    </ScrollView>
</LinearLayout>